--- a/Examen2_ds411/Views/Shared/_Layout.cshtml
+++ b/Examen2_ds411/Views/Shared/_Layout.cshtml
@@ -9,22 +9,38 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            @Html.ActionLink("Nombre de la aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                </ul>
+    @if (Session["rol"] != null) { 
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+            <div class="container">
+                @Html.ActionLink("Banca en Linea", "EstadoCuenta", "Cliente", new { area = "" }, new { @class = "navbar-brand" })
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        @if (Session["rol"]?.ToString() == "administrador")
+                        {
+                            //Vistas de Administrador
+                            <li>@Html.ActionLink("Crear Cliente", "Cliente", "Admin", new { area = "" }, new { @class = "nav-link" })</li>
+                        }
+                        else
+                        {
+                            //Vistas de Cliente
+                            <li>@Html.ActionLink("Estado de Cuenta", "EstadoCuenta", "Cliente", new { area = "" }, new { @class = "nav-link" })</li>
+
+                        }
+
+                    </ul>
+                </div>
+                <span class="navbar-text">
+                    @Html.ActionLink("Cerrar Seción", "CerrarSesion", "Login", new { area = "" }, new { @class = "btn btn-danger" })
+                </span>
             </div>
-        </div>
-    </nav>
+        </nav>
+     }
+    
+    
     <div class="container body-content">
         @RenderBody()
         <hr />
